--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=cricket-matches
 # src/main/resources/application.properties
+logging.level.com.example.cricketmatches=DEBUG
 cricket.api.url=https://api.cricapi.com/v1/currentMatches
 cricket.api.key=52846a2d-03e4-484e-a8c7-333ff0e120e0
